--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@
 body {
      font-family: "Roboto", sans-serif;
 }
+.main-heading {
+     color: rgb(63, 135, 245);
+}
 
 .packeg-heading {
      color: #0a0826;
@@ -12,9 +15,16 @@ body {
 .packeg-color {
      color: #231d4f;
 }
+.packeg-bg {
+     border-radius: 20px;
+     background-color: rgba(176, 205, 248, 0.322);
+}
 .package-3 {
      border-radius: 20px;
      background-color: rgb(63, 135, 245);
      box-shadow: rgba(96, 152, 235, 0.25) 0px 19px 38px,
           rgba(120, 150, 194, 0.22) 0px 15px 12px;
+}
+.app-btn {
+     background-color: #000000;
 }
